Overflow bug

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,4 +1,12 @@
 /* General project styling */
+.projects {
+    overflow-x: hidden;
+
+    @media screen and (--medium-viewport) {
+        overflow-x: visible;
+    }
+}
+
 .project {
     padding-top: 3em;
 
